@@ -2,6 +2,8 @@ Devel::Cover.pm history
 
 Release 0.57 - 
  - Report Pod::Coverage load failure (dom - happygiraffe.net) (rt 14425).
+ - Use Perl::Tidy as an alternative syntax highlighter
+   (Sébastien Aperghis-Tramoni).
 
 Release 0.56 - 1st August 2006
  - gcov2perl creates db if necessary (Steve Peters) (rt 13536).
